Corrected the adf parent pom which made the test run of the ViewController fail. Added memory options to surefire plugin to avoid out of memory. Modified ReadMe.txt.